linker_kldload_busy(): allow recursion

PR:	259748

(cherry picked from commit 4f924a786ae08af496dfe55230f8fe1e2ca16150)